# pebra

./: .gitattributes  .gitignore  .importlinter  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASING.md  SECURITY.md  noxfile.py  pyproject.toml  requirements-release.in  requirements-release.txt
.github/workflows/: ci.yml  release.yml  security.yml
benchmarks/: README.md  __init__.py
benchmarks/continuity/: __init__.py  fit.py  smoke.py  test_fit.py  test_smoke.py  test_warm.py  warm.py
benchmarks/flow/: __init__.py  compare.py  replay.py  scorecard.py  test_compare.py  test_replay.py  test_scorecard.py
benchmarks/math/: __init__.py  compare.py  export_fixture.py  fixture_loader.py  oracle_metrics.py  pebra_metrics.py  reference_metrics.py  run.py  test_export_fixture.py  test_fixture_loader.py  test_oracle_metrics.py  test_run.py
docs/: GATE_CONTRACT.md  PEBRA_Architecture.md  PEBRA_COMMAND_REFERENCE.md  PEBRA_Report_Final.md
docs/plan/: IMPLEMENTATION_PLAN.md  README.md
e2e/: README.md  __init__.py  config.json  conftest.py  test_agent_integration_explore.py  test_boundary_discipline.py  test_graph_snapshot_boundary.py
e2e/experiments/: __init__.py
e2e/fixtures/: request_first_edit.json  request_second_edit.json
e2e/smoke/: test_cli_discovery.py  test_smoke.py
e2e/utils/: __init__.py  agent_harness.py  baseline.py  cli_harness.py  dashboard_harness.py  learning_scenario.py  rca_probe.py  repo_factory.py  report_generator.py
examples/: login_patch.json
pebra/: __main__.py  composition.py  learning_composition.py  observatory_context.py  provenance.py
pebra/adapters/: _ast_utils.py  _paths.py  architecture_map.py  ast_diff_adapter.py  ast_import_graph.py  bandit_adapter.py  bounded_process.py  calibration_store.py  candidate_application.py  candidate_binding.py  candidate_edits.py  candidate_gate.py  candidate_replay_cache.py  codegraph_adapter.py  codegraph_candidate_refinement.py  codegraph_explorer.py  codegraph_graph_reader.py  codegraph_materialized_diff.py  codegraph_temp_index.py  composite_evidence.py  continuity_witness.py  contract_surface.py  enforcement_capability.py  evidence_merge.py  gate_check_adapter.py  git_adapter.py  git_change_verifier.py  import_graph_cache.py  learning_store.py  patch_header_adapter.py  patch_materializer.py  path_safety.py  paths.py  radon_adapter.py  rca_adapter.py  repository_registry.py  request_evidence.py  sanction_store.py  snapshot_read_store.py  structural_feature_adapter.py  (+1 more)
pebra/app/: accept_risk_controller.py  assess_controller.py  candidate_apply_controller.py  explore_controller.py  finalize_outcome_controller.py  human_approval_controller.py  learning_controller.py  observatory_query_controller.py  promotion_controller.py  record_outcome_controller.py  verify_controller.py
pebra/cli/: accept_risk.py  agent_init.py  apply_candidate.py  assess.py  candidate_patch.py  capabilities.py  dashboard.py  dependents.py  explore.py  finalize_outcome.py  gate_check.py  gate_hook.py  graph_stats.py  learn.py  main.py  promote.py  record_outcome.py  scorecard.py  setup_graph.py  tui.py  verify.py
pebra/core/: agent_hook_contract.py  agent_hosts.py  apply_snapshot.py  assessment_builder.py  assessment_history.py  benefit_aggregation.py  benefit_model.py  calibrated_priors.py  candidate_aggregation.py  candidate_binding_contract.py  candidate_parser.py  candidate_refinement.py  change_classifier.py  confidence_gate.py  constants.py  dashboard_metrics.py  decision_engine.py  destructive_op_model.py  engine_argv.py  engine_paths.py  explanation_generator.py  exploration.py  exposure_model.py  file_risk_aggregation.py  gate_contract.py  graph_snapshot.py  graph_trust.py  graph_version.py  high_risk_controls.py  human_review.py  language_capability.py  learning_context.py  learning_eval.py  model_guidance.py  models.py  modify_risk_model.py  outcome_labels.py  patch_paths.py  post_assessment_guardrails.py  prediction_capture.py  (+13 more)
pebra/dashboard/: api.py  auth.py  ports.py  server.py
pebra/mcp_server/: __main__.py  server.py
pebra/ports/: architecture_knowledge_port.py  blast_radius_port.py  calibration_port.py  candidate_application_port.py  candidate_binding_port.py  candidate_replay_port.py  change_verifier_port.py  codegraph_port.py  config_port.py  contract_surface_port.py  evidence_port.py  fanin_port.py  file_fanin_port.py  graph_risk_refinement_port.py  language_capability_port.py  learning_context_port.py  learning_port.py  materialized_diff_port.py  observatory_read_port.py  outcome_port.py  repository_explorer_port.py  repository_registry_port.py  sanction_port.py  snapshot_read_port.py  store_port.py  structural_feature_port.py  symbol_diff_port.py
pebra/tui/: __init__.py  app.py  data.py  exploration.py  ledger_groups.py  theme.py  theme.tcss
scripts/: __init__.py  demo_observatory.py  dev_package.py  verify_distribution.py
tests/: conftest.py  test_core_only_import.py  test_core_stdlib_only.py
tests/golden/: test_assess_cli_golden.py
tests/integration/: test_accept_risk_apply_cli.py  test_apply_candidate_cli.py  test_apply_candidate_flow.py  test_benefit_fact_affects_decision.py  test_candidate_patch_cli.py  test_cli_help_encoding.py  test_codegraph_explorer_real.py  test_codegraph_freshness_real.py  test_codegraph_materialized_diff_real.py  test_composite_evidence.py  test_dashboard_cli.py  test_dashboard_read_only_no_write.py  test_dashboard_server.py  test_demo_observatory.py  test_engine_argv_windows_security.py  test_explore_cli.py  test_finalize_outcome_cli.py  test_git_change_verifier.py  test_ignition_loop.py  test_language_tier_capability_probe.py  test_learning_context_store.py  test_mcp_server_handlers.py  test_mcp_server_serve.py  test_observatory_learning.py  test_promotion_calibration_features.py  test_promotion_writer.py  test_rca_adapter_real.py  test_record_outcome_cli.py  test_repository_registry.py  test_revision_completeness_flow.py  test_scorecard_cli.py  test_snapshot_read_store.py  test_store_hash_chain.py  test_store_learning_tables.py  test_tui_app.py  (+12 more)
(+336 files in other folders)
