[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pebra"
version = "0.1.0"
description = "Pre-Edit Benefit-Risk Assessment for coding agents — a deterministic, hexagonal decision controller."
requires-python = ">=3.11"
readme = "README.md"

# Python runtime deps per Architecture §12. NOTE: core/ uses none of these (stdlib-only, enforced).
# Required external runtime graph engine: @colbymchenry/codegraph (npm/binary), checked at runtime
# by the CodeGraph adapter; it is intentionally not listed here because pip cannot install npm deps.
# The pure core/import-boundary path remains runnable with `pip install -e . --no-deps`; the runtime
# deps below are consumed by adapters, CLI surfaces, dashboard, MCP, and validation lanes.
dependencies = [
    "numpy",
    "scikit-learn>=1.2",
    "cryptography",
    "mapie",
    "radon",
    "bandit",
    "pyyaml",
    "fastapi",
    "starlette",
    "uvicorn",
    "jinja2",
    "mcp>=1.0,<2",
]

[project.scripts]
pebra = "pebra.cli.main:main"
pebra-mcp = "pebra.mcp_server.__main__:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "hypothesis",
    "syrupy",
    "jsonschema",
    "ruff",
    "mypy",
    "import-linter",
    "nox",
    "build",
    "twine",
    "pre-commit",
    # Oracle backends for tests/oracles/ ONLY: PEBRA's stdlib core math is validated against these
    # reference implementations (numpy/sklearn/scipy) to machine precision. They are NEVER imported
    # by pebra.core (purity contract) — they exist here purely as test ground-truth.
    "numpy",
    "scikit-learn>=1.2",
    "scipy",
]

[project.optional-dependencies]
bench = ["pandas", "scipy", "matplotlib", "seaborn"]
bench-szz = ["pydriller"]
bench-agent = ["swebench"]
bench-external = ["datasets"]
ui-e2e = ["playwright", "pytest-playwright"]

[tool.setuptools.packages.find]
include = ["pebra*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
