[build-system]
requires = ["setuptools==83.0.0", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pebra"
version = "0.1.0"
description = "Pre-Edit Benefit-Risk Assessment for coding agents — a deterministic, hexagonal decision controller."
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "PEBRA contributors" },
]
license = "Apache-2.0 AND MIT"
license-files = [
    "LICENSE",
    "pebra/dashboard/static/vendor/uplot.LICENSE.txt",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

# Python runtime deps per Architecture §12. NOTE: core/ uses none of these (stdlib-only, enforced).
# Required external runtime graph engine: @colbymchenry/codegraph (npm/binary), checked at runtime
# by the CodeGraph adapter; it is intentionally not listed here because pip cannot install npm deps.
# The pure core/import-boundary path remains runnable with `pip install -e . --no-deps`; the runtime
# deps below are consumed by adapters, CLI surfaces, dashboard, MCP, and validation lanes.
dependencies = [
    "numpy",
    "scikit-learn>=1.2",
    "cryptography",
    "mapie",
    "bandit",
    "pyyaml",
    "fastapi",
    "starlette",
    "uvicorn",
    "jinja2",
    "mcp>=1.0,<2",
]

[project.scripts]
pebra = "pebra.cli.main:main"
pebra-mcp = "pebra.mcp_server.__main__:main"

[project.urls]
Homepage = "https://github.com/Rajioba1/pebra"
Repository = "https://github.com/Rajioba1/pebra"
Issues = "https://github.com/Rajioba1/pebra/issues"
Releases = "https://github.com/Rajioba1/pebra/releases"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "hypothesis",
    "syrupy",
    "jsonschema",
    "ruff",
    "mypy",
    "import-linter",
    "nox",
    "build",
    "twine",
    "pre-commit",
    # Oracle backends for tests/oracles/ ONLY: PEBRA's stdlib core math is validated against these
    # reference implementations (numpy/sklearn/scipy) to machine precision. They are NEVER imported
    # by pebra.core (purity contract) — they exist here purely as test ground-truth.
    "numpy",
    "scikit-learn>=1.2",
    "scipy",
]

[project.optional-dependencies]
bench = ["pandas", "scipy", "matplotlib", "seaborn"]
bench-szz = ["pydriller"]
bench-agent = ["swebench"]
bench-external = ["datasets"]
ui-e2e = ["playwright", "pytest-playwright"]
agent-ab = ["anthropic>=0.30"]

[tool.setuptools.packages.find]
include = ["pebra*"]
exclude = ["benchmarks*", "docs*", "e2e*", "tests*"]
namespaces = false

[tool.setuptools.package-data]
"pebra.dashboard" = [
    "templates/*.html",
    "static/*.js",
    "static/*.css",
    "static/vendor/*.js",
    "static/vendor/*.css",
    "static/vendor/*.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
